syntax = "proto3";

import "cy/game/pb/common/head.proto";
import "cy/game/pb/common/common.proto";

package pbclub;

// 成员信息
message MemberInfo {
    uint64 UserID = 1;
    // 身份  1 群主 2 管理员 3 普通成员 4 未通过 5黑名单
    int32 Identity = 2;
    string UserName = 3;
    string Profile = 4;
    // 1 在线 0 不在线
    int32 Online = 5;    
    bool Agree = 6;
}

// 基本信息
message BaseInfo {   
    string Name = 1;            
    bool IsAutoCreate = 2; // 是否自动开房
    bool IsCustomGameArg = 3; // 自定义房间
    string Notice = 4; // 公告
}

// 建房参数
message GameArg {   

}

message ClubInfo {
    int64 ID = 1;
    uint64 MasterUserID = 2; // 群主
    string MasterName = 3;
    string Profile = 4;
    BaseInfo Base = 5;
    int32 MemberCnt = 6;
    int32 OnlineCnt = 7;
    GameArg Arg = 8;
    repeated pbcommon.DeskInfo Desks = 9;    
}

// ID查询俱乐部信息 c -> s
message QueryClubByIDReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}
message QueryClubByIDRsp {
    pbcommon.RspHead Head = 1;
    ClubInfo Info = 2;
    bool Agree = 3;
}

// 简单的信息
message BriefInfo {
    int64 ID = 1;    
    string Name = 2;   
    string Profile = 3;
    uint64 MasterUserID = 4;
}

// s -> c
message ClubList {
    repeated BriefInfo List = 1;
}

// c -> s
message SubClubChange {
    int32 SubOrUn = 1; // 1 订阅变动通知 2 取消订阅
}

message ClubChangeInfo { 
    // 1 加入 2 修改 3 离开 4 解散
    int32 Typ = 1;
    uint64 UserID = 2; // 加入 离开 的人
    BriefInfo Info = 3;        
}

// c -> s
message CreateClubReq {
    pbcommon.ReqHead Head = 1;  
    BaseInfo Base = 3;
    GameArg Arg = 4;     
}
message CreateClubRsp {
    pbcommon.RspHead Head = 1;
    // 1成功 2数量限制 3参数错误 4内部服务错误
    int32 Code = 2;   
}

// c -> s
message RemoveClubReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}
message RemoveClubRsp {
    pbcommon.RspHead Head = 1;
    // 1成功 2权限无效
    int32 Code = 2;
}

// c -> s
message UpdateClubReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;        
    BaseInfo Base = 3;
    GameArg Arg = 4;  
}
message UpdateClubRsp {
    pbcommon.RspHead Head = 1;
    // 1成功 2参数错误 3无效ClubID 4权限
    int32 Code = 2;
}

// c -> s
message JoinClubReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}
message JoinClubRsp {
    pbcommon.RspHead Head = 1;
    // 1提交成功 2超过限制 3无效俱乐部 4已经在申请中 5内部服务错误
    int32 Code = 2;
}

// 处理成员身份 c -> s 
message DealMemberIdentityReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
    uint64 UserID = 3;
    int32 Identity = 4;// 新的身份
}

message DealMemberIdentityRsp {
    pbcommon.RspHead Head = 1;
    // 1成功 2无效俱乐部ID 3无效玩家ID 4无效Identity
    int32 Code = 2;
}

// 退出俱乐部 c -> s
message ExitClubReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}
message ExitClubRsp {
    pbcommon.RspHead Head = 1;
    // 1成功 2无效ClubID
    int32 Code = 2;
}

// c -> s
message QueryClubMemberReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}

message QueryClubMemberRsp {  
    pbcommon.RspHead Head = 1;  
    repeated MemberInfo Members = 2;
}

// c -> s 
message AgreeClubLawReq {
    pbcommon.ReqHead Head = 1;
    int64 ClubID = 2;
}

message AgreeClubLawRsp {
    pbcommon.RspHead Head = 1;
}

